--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,17 @@ Title: Standard benchmark optimization functions
 Version: 0.1
 Authors@R: person("Thomas", "Torsney-Weir", email="torsneyt@gmail.com",
                   role=c("aut", "cre"))
-Description: A set of standard benchmark optimization functions for R
+Description: A set of standard benchmark optimization functions for R and
+             a common interface to sample them.
 Depends: R (>= 3.0)
 License: MIT
 LazyData: true
 Suggests: testthat
+Depends:
+  R (>= 3.0)
+Imports:
+  lhs,
+  stringr
 Collate:
   'vectorize.R'
   'sampling.R'
