--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,23 +4,22 @@ Version: 0.1
 Authors@R: person("Thomas", "Torsney-Weir", email="torsneyt@gmail.com",
                   role=c("aut", "cre"))
 Description: A set of standard benchmark optimization functions for R and
-             a common interface to sample them.
-Depends: R (>= 3.0)
+    a common interface to sample them.
+Depends:
+    R (>= 3.0)
 License: MIT
 LazyData: true
-Suggests: 
-  testthat,
-  covr
-Depends:
-  R (>= 3.0)
+Suggests:
+    testthat,
+    covr
 Imports:
-  lhs,
-  randtoolbox,
-  stringr
+    lhs,
+    randtoolbox,
+    stringr
 Collate:
-  'optim-functions.R'
-  'vectorize.R'
-  'sampling.R'
-  'single.objective.R'
-  'functions.R'
-
+    'optim-functions.R'
+    'vectorize.R'
+    'sampling.R'
+    'single.objective.R'
+    'functions.R'
+RoxygenNote: 5.0.1
