--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Imports:
     randtoolbox,
     stringr
 Collate:
-    'optim-functions.R'
+    'optim.functions.R'
     'vectorize.R'
     'sampling.R'
     'single.objective.R'
