--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: optim.functions
-Title: Standard benchmark optimization functions
+Title: Standard Benchmark Optimization Functions
 Version: 0.1
 Authors@R: person("Thomas", "Torsney-Weir", email="torsneyt@gmail.com",
                   role=c("aut", "cre"))
@@ -7,7 +7,7 @@ Description: A set of standard benchmark optimization functions for R and
     a common interface to sample them.
 Depends:
     R (>= 3.0)
-License: MIT
+License: MIT + file LICENSE
 LazyData: true
 Suggests:
     testthat,
